--- a/wp-content/themes/toppeq/scss/theme/_footer.scss
+++ b/wp-content/themes/toppeq/scss/theme/_footer.scss
@@ -1,5 +1,6 @@
 footer{
 	background-color: $gray-300;
+	padding: 0px 65px;
 	.row{
 		@media (max-width: 767px){
 			flex-direction: column-reverse;
