--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -10670,6 +10670,15 @@ hr.line-separator {
       position: relative;
       text-align: center; } }
 
+/* line 913, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+.single-press .header-bg {
+  display: none; }
+
+/* line 916, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+.single-press .header {
+  box-shadow: 0px 0px 10px 0px #dddbdb;
+  border-left: 4px solid #f16624; }
+
 /* line 1, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
 .logo {
   width: 200px; }
